--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         "barryvdh/laravel-elfinder": "^0.3.12",
         "barryvdh/laravel-ide-helper": "^2.1",
         "cviebrock/eloquent-sluggable": "^4.3",
+        "davejamesmiller/laravel-breadcrumbs": "3.x",
         "fideloper/proxy": "~4.0",
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelrus/sleepingowl": "4.*@dev",
-        "nicolaslopezj/searchable": "1.*",
-        "league/flysystem-sftp": "^1.0"
+        "league/flysystem-sftp": "^1.0",
+        "nicolaslopezj/searchable": "1.*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
